[tool.poetry]
name = "courier"
version = "0.1.0"
description = ""
authors = ["Taylor Young <y.taylor@rocketmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.8.1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pylint = "^2.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
